--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule ^(.*)$ /index.php [L]
+	RewriteEngine On
+	RewriteBase /
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)$ /index.php [L]
 </IfModule>
+
+
+Options -MultiViews
